--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ default: &default
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: user
-  password: senha123
+  password: senha
   socket: /var/run/mysqld/mysqld.sock
 
 development:
